integration_tests/tests/integration_tests/snapshots/integration_tests__show_collection_metadata_option_tests__get_asset_by_group_with_show_collection_metadata_option.snap
---
source: integration_tests/tests/integration_tests/show_collection_metadata_option_tests.rs
expression: response
---
{
  "total": 1,
  "limit": 50,
  "page": 1,
  "items": [
    {
      "interface": "ProgrammableNFT",
      "id": "AH6wj7T8Ke5nbukjtcobjjs1CDWUcQxndtnLkKAdrSrM",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://madlads.s3.us-west-2.amazonaws.com/json/1983.json",
        "files": [
          {
            "uri": "https://madlads-collection.s3.us-west-2.amazonaws.com/_collection.png",
            "mime": "image/png"
          }
        ],
        "metadata": {
          "attributes": [],
          "description": "Fock it.",
          "name": "Mad Lads #1983",
          "symbol": "MAD",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {
          "image": "https://madlads-collection.s3.us-west-2.amazonaws.com/_collection.png",
          "external_url": "https://madlads.com"
        }
      },
      "authorities": [
        {
          "address": "2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "J1S9H3QjnRtBbbuD4HjPV6RpRhwuk4zKbxsnCHuTgh9w",
          "collection_metadata": {
            "description": "Fock it.",
            "external_url": "https://madlads.com",
            "image": "https://madlads-collection.s3.us-west-2.amazonaws.com/_collection.png",
            "name": "Mad Lads",
            "symbol": "MAD"
          }
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.042,
        "basis_points": 420,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "5XvhfmRjwXkGp3jHGmaKpqeerNYjkuZZBYLVQYdeVcRv",
          "share": 0,
          "verified": true
        },
        {
          "address": "2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW",
          "share": 100,
          "verified": true
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": true,
        "delegate": "BPB5idZgbA1DG4XEmnKs62AADRZFf3jY7Kr9mpMGyKPi",
        "ownership_model": "single",
        "owner": "FzVHkut1XLbGz5W56mUJoRwDkRFmyjTB6HCyatEDhDXL"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "balance": 1,
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "3crBqZZsHhoLphM55MG4KRW6SbNzFEBFnehw7PW7ZRKt",
        "mint_authority": "FAzbjKo66M3tKhkKqegmWFaYr93FB74B1ChEBdFyKcip",
        "freeze_authority": "FAzbjKo66M3tKhkKqegmWFaYr93FB74B1ChEBdFyKcip"
      }
    }
  ]
}
